--- a/style.css
+++ b/style.css
@@ -49,10 +49,77 @@ box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
   background: var(--color-gradient);
 }
 
+.header{
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
 
+.header .logo-wrapper{
+ display: flex;
+ gap: 18px;
+ align-items: center;
+}
 
+.header .logo-wrapper .logo{
+ height: 55px;
+ width: 56px ;  
+ display: flex;
+ color: #fff;
+ font-size: 1.35rem;
+ flex-shrink: 0;
+ border-radius: 15px;
+ align-items: center;
+ justify-content: center;
+ background: var(--color-gradient);
+}
 
+.header .logo-wrapper .h1{
+ font-size: 1.9rem;
+ font-weight: 700;
+}
 
+.header .theme-toggle{
+ height: 43px;
+ width: 43px;
+ border-radius: 50%;
+ font-size: 1.05rem;
+ cursor: pointer;
+ display: flex;
+ color: var(--color-placeholder);
+ align-items: center;
+ justify-content: center;
+ background: var(--color-input);
+ border:1px solid var(--color-border);
+ flex-shrink:0;
+}
+
+.header .theme-toggle:hover{
+ color: var(--color-primary);
+ transform: translateY(-2px);
+ box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+}
+
+.main-content{
+ margin: 35px 0 5px;
+}
+
+.main-content .prompt-container{
+ width: 100%;
+ margin-bottom: 20px;
+}
+
+.prompt-container .prompt-input{
+ width: 100%;
+ line-height: 1.6;
+ font-size: 1.05rem;
+ min-height: 120px;
+ padding: 16px 20px;
+ border-radius: 15px;
+ color: var(--color-text);
+ background: var(--color-input);
+ border: 1px solid --color-border;
+}
 
 
 
