--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 *{
     margin: 0;
-    padding: 0;
+    padding: 0;  
     box-sizing: border-box;
-    font-family: "Inter", sansserif;
+    font-family: "Inter", sans-serif;
 }
 
 :root{
@@ -92,6 +92,7 @@ box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
  background: var(--color-input);
  border:1px solid var(--color-border);
  flex-shrink:0;
+ transition: all 0.3s ease;
 }
 
 .header .theme-toggle:hover{
@@ -107,6 +108,7 @@ box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
 .main-content .prompt-container{
  width: 100%;
  margin-bottom: 20px;
+ position: relative;
 }
 
 .prompt-container .prompt-input{
@@ -118,9 +120,101 @@ box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
  border-radius: 15px;
  color: var(--color-text);
  background: var(--color-input);
- border: 1px solid --color-border;
+ border: 1px solid var(--color-border);
+ resize: vertical;
+ transition: all 0.3s ease;
 }
 
+.prompt-container .prompt-input:focus{
+ outline:none;
+ border-color: var(--color-accent);
+ box-shadow: 0 0 0 4px rgba(139, 92, 246, 0.15);
+}
+
+.prompt-container .prompt-btn{
+ position: absolute;
+ right: 15px;
+ bottom: 15px;
+ height: 35px;
+ width: 35px;
+ border: none;
+ color: #fff;
+ font-size: 0.75rem;
+ border-radius: 50%;
+ opacity: 0.8;
+ background: var(--color-gradient);
+}
+
+.prompt-container .prompt-btn:hover{
+ opacity: 1;
+ transform: translateY(-2px);
+ box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+}
+
+.main-content .prompt-actions{
+ display: grid;
+ gap: 14px;
+ grid-template-columns: 1.2fr 1fr 1.1fr 1fr;
+}
+
+.prompt-actions .select-wrapper{
+ position: relative;
+
+}
+
+.prompt-actions .select-wrapper::after{
+ content: "\f078";
+ font-family: "Font Awesome 6 Free";
+ font-weight: 900;
+ position: absolute;
+ right: 20px;
+ top: 50%;
+ padding-left: 7px;
+ font-size: 0.9rem;
+ pointer-events: none;
+ background: var(--color-input);
+ color: var(--color-placeholder);
+ transform: translateY(-50%);
+}
+
+.prompt-actions :where(.custom-select, .generate-btn){
+ cursor: pointer;
+ padding: 12px 20px;
+ font-size: 1rem;
+ border-radius: 10px;
+ background: var(--color-input);
+ border: 1px solid --color-border;
+ transition: all 0.3s ease;
+}
+
+.prompt-actions .custom-select{
+ width: 100%;
+ outline: none;
+ height: 100%;
+ appearance: none;
+}
+
+.prompt-actions .custom-select:is(:focus, :hover){
+ border-color: var(--color-accent);
+ box-shadow: 0 0 0 3px rgba(139, 92, 246, 0.1);
+}
+
+.prompt-actions .generate-btn{
+ display: flex;
+ gap: 12px;
+ font-weight: 500;
+ align-items: center;
+ justify-content: center;
+ padding: 12px 25px;
+ border: none;
+ color: #fff;
+ background: var(--color-gradient);
+}
+
+.prompt-actions .generate-btn:hover{
+ transform: translateY(-2px);
+ box-shadow: 0 4px 10px rgba(109, 40, 217, 0.3);
+}
 
 
 
