--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ display: none;
  border-radius: 50%;
  border: 3px solid var(--color-border);
  border-top-color: var(--color-primary);
- /*animation: spin 1s linear infinite;*/
+ animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
